--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Exo+2:300,300i');
 .flex-page{
 	display: flex;
 	flex-direction: row;
@@ -27,7 +28,38 @@
     justify-content: center;
 }
 .text-input{
-	background: black;
-	width: 50%;
-	height: 40%;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 50%;
+    height: 40%;
+    z-index: 2;
+}
+.text-input-font{
+	font-family: 'Exo 2', light;
+	color: #d4d2d3;
+	font-size: 30px;
+	padding-top: 20px;
+}
+.form-position{
+	display: flex;
+}
+.input-email{
+	background: rgba(0, 0, 0, 0.0);
+	border: 1px solid #d4d2d3;
+	height: 50px;
+	color: white;
+	padding-left: 20px;
+	font-family: 'Exo 2', light;
+	width: 300px;
+}
+.input-button{
+	background: rgba(117, 29, 65, 0.2);
+	border: 1px solid #d4d2d3;
+	border-radius: 5px;
+	width: 180px;
+	height: 50px;
+	color: #d4d2d3;
+	font-family: 'Exo 2', light;
+	cursor: pointer;
 }
