--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2:300,300i');
+body{
+	background-image: url(../images/huose.jpg);
+    background-position: center bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .flex-page{
 	display: flex;
-	flex-direction: row;
-	background-image: url(../images/huose.jpg);
-	background-size: 100%;
-	align-items: center;
-	width: 100%;
-	height: 100%;
-	background-position: 0px -220px;	
+	flex-direction: row;	
+	align-items: center;	
 }
 .menu-left{
 	background: rgba(0, 0, 0, 0.5);
 	width: 10%;
 	height: 100%;	
+	min-width: 110px;
 }
 .blackground{
 	background: rgba(0, 0, 0, 0.5);
